temporal: fix 4 silent-data-corruption bugs (Issues 2-5), add concurrency stress tests, merge upstream
Bug fixes:
- Issue 2: diff now uses reconstructed historical state via execute_diff_reconstructed
- Issue 3: reconstruct_all_at INNER JOINs memories to exclude orphaned events
- Issue 4: confidence_trajectory uses event-sourced historical confidence
- Issue 5: consolidation_efficiency LEFT JOINs to count deleted/consolidated memories

Concurrency:
- 5 new stress tests (concurrent append/read, reconstruct, diff, drift, batch contention)
- Fixed ensure_memory_row to use valid serialized TypedContent

Merge resolution:
- Kept bugfix changes for temporal crate
- Accepted upstream reranker feature flag, compute_content_hash Result return type
- 93 stress tests, 222+ total tests passing

--- a/crates/cortex/cortex-napi/Cargo.toml
+++ b/crates/cortex/cortex-napi/Cargo.toml
@@ -27,6 +27,7 @@ cortex-session = { workspace = true }
 cortex-reclassification = { workspace = true }
 cortex-observability = { workspace = true }
 cortex-cloud = { workspace = true }
+cortex-temporal = { workspace = true }
 napi = { workspace = true }
 napi-derive = { workspace = true }
 tokio = { workspace = true }
