feat: Complete Cortex CLI integration and bridge CI pipeline
- Add Cortex CLI commands to drift-cli (cortex status, add, list, get, etc.)
- Implement bridge CI pass in drift-ci with grounding support
- Add Cortex tools to drift-mcp server
- Create comprehensive test suites for Cortex integration
- Update package.json with new dependencies
- Add CORTEX-CLI-HARDENING-TASKS.md documentation
- Build cortex-napi native binary for macOS ARM64

This completes the full integration of the Cortex memory system
into the Drift CLI toolchain, enabling end-to-end testing of
novel features like evidence-based grounding, causal intelligence,
and multi-agent trust through CLI commands.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:ci": "cd packages/drift-ci && npm run build",
     "build:cortex": "cd packages/cortex && npm run build",
     "build:ts": "npm run build:contracts && npm run build:core && npm run build:cortex && npm run build:cli && npm run build:mcp && npm run build:ci",
-    "build": "npm run build:napi && npm run build:ts",
+    "build": "npm run build:napi && npm run build:cortex-napi && npm run build:ts",
     "typecheck": "npm run typecheck --workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
     "clean": "npm run clean --workspaces --if-present"
