fix: CLI hardening — path normalization, NAPI JSON parsing, command refinements
- Normalize file paths in scanner and parser to prevent duplicate db entries
- Add parse-napi-json utility for double-encoded JSON from string NAPI methods
- Fix bridge status to use read-only health check instead of triggering ground-all
- Fix cloud readRows/getMaxCursor extra projectRoot arg
- Improve explain command with violation lookup and context enrichment
- Tighten export command format validation
- Fix simulate to parse NAPI JSON properly
- Move --require-native check to commander preAction hook
- Fix bridge event-mappings tier filter (was always returning all)
- Add convenience scripts to root package.json
- Add CLI-FIX-PLAN.md and regression tests (T-FIX-01 through T-FIX-09)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "build": "npm run build:napi && npm run build:cortex-napi && npm run build:ts",
     "typecheck": "npm run typecheck --workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
-    "clean": "npm run clean --workspaces --if-present"
+    "clean": "npm run clean --workspaces --if-present",
+    "scan": "node packages/drift-cli/dist/index.js scan",
+    "scan:all": "node packages/drift-cli/dist/index.js analyze --scan",
+    "patterns": "node packages/drift-cli/dist/index.js patterns",
+    "status": "node packages/drift-cli/dist/index.js status",
+    "drift": "node packages/drift-cli/dist/index.js"
   },
   "engines": {
     "node": ">=18"
